# pretrain-braindecode-models

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/demos/: plot_history_demo.ipynb
pretrain_braindecode_models/: __init__.py  config.py  dataset.py  features.py  plots.py  run_experiment.py
pretrain_braindecode_models/configs/: TCN.yml
pretrain_braindecode_models/modeling/: augmentations.py  callbacks.py  lightning_modules.py  models.py  plotting.py  train.py
pretrain_braindecode_models/utils/: colors.py  custom_types.py  dimensionality_reduction.py  eeg.py  folders.py  grid_search.py  loading.py  logging.py  metrics.py  misc.py  preprocessing.py  signal.py  timeutils.py  torchview_helper.py
tests/: test_augmentations.py  test_misc_reorder_dims.py
